@@ -1,3 +1,4 @@
+    * Improve RTM plugin (bug #520427): don't sync tasks from archived lists
     * Automatic cleanup of closed task, plugin by Luca Invernizzi
     * Allow to change dismissed date of tasks by Luca Invernizzi
     * Docky applet support, by Luca Invernizzi
